static_files/css/style.css
/*
    GENERAL STYLING
*/
:root {
    --primary-color: #630000;
    --secondary-color: #d8b6a4;
    --tertiary-color: #eeebdd;
    --text-color: #000000;
    --secondary-color-opacity: #80630000; 
}

*, ** {
    margin: 0;
    box-sizing: border-box;
}

body {
    background-color: var(--tertiary-color);
}

/*
    LAYOUTS
*/
/* It is recommended that this class should only be applied to a flexbox*/
.custom-center {
    justify-content: center;
    align-items: center;
}

.custom-column {
    display: flex;
    flex-direction: column;
}

.custom-column-responsive {
    display: flex;
    flex-direction: row;
}

.custom-row {
    display: flex;
    flex-direction: row;
}

.custom-row-responsive {
    display: flex;
    flex-direction: row;
}

/*
    NORMAL STYLES
*/
.button {
    border-radius: 28px;
    padding-left: 100px;
    padding-right: 100px;
}

#car-img-div {
    width: 100vw;
    height: 100vh;
    background-image: url('/img/car-2.jpg');
    filter: brightness(0.5);
    background-repeat: no-repeat;
    background-size: cover;
    background-position-y: center;
}

#conversion-text {
    position: absolute;
    margin-left: 10vw;
    margin-right: 10vw;
    width: 80vw;
    height: 40vh;
    margin-top: 30vh;
    margin-bottom: auto;
    color: white;
    text-align: center;
}

#conversion-text h2 {
    margin-bottom: 36px;
}

.custom-card {
    margin: 20vh 20vw;
}

.custom-navbar {
    height: 100vh;
    width: 15vw;
}

.dash {
    height: 4px;
    width: 5vw;
    background-color: var(--text-color);
    justify-self: center;
    align-self: center;
}

.dashboard-divider {
    width: 92%;
    height: 1px;
    background-color: var(--secondary-color);
    margin: 0 4%;
}

#dashboard-nav div {
    border-top: 1px solid var(--tertiary-color);
    border-bottom: 1px solid var(--tertiary-color);
}

.dashboard-nav-button {
    border: none;
    border-radius: 14px;
    color: white;
    display: block;
    width: 92%;
    margin: 2% 4% 2% 4%;
}

.dashboard-nav-button:hover {
    background-color: var(--tertiary-color);
}

footer {
    height: 10vh;
    color: var(--tertiary-color);
}

footer p {
    text-align: center;
    font-weight: 100;
    font-size: 0.7em;
}

.numbered-circle {
    height: 100px;
    width: 100px;
    border-radius: 50%;
    background-color: var(--primary-color);
    box-shadow: 0px 10px 40px var(--secondary-color-opacity);
    /*
    TODO: Change the value of this color to something that fits better with the brand
    */
}

.numbered-circle h1 {
    margin: 20px;
    align-items: center;
    justify-content: center;
}

.relative {
    position: relative;
}

section {
    height: 90vh;
}

.section-dash {
    display: flex;
    flex-direction: row;
}

.section-hero {
    background-image: url('img/car.svg');
    position: relative;
    height: 80vh;
}

.section-info {
    padding: 10vh;
    background-color: var(--secondary-color);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.section-info h2 {
    margin-bottom: 30vh;
}

#section-sign-up h2 {
    margin-bottom: 5vh;
}

.step {
    margin: auto 40px;
    justify-content: center;
    align-items: center;
}

.step p {
    font-weight: 500;
    margin-top: 20px;
}

.step > div > h1 {
    margin: auto;
    color: white;
}

.steps {
    justify-content: center;
    align-items: center;
}

